02_eks/aws_k8s.tf
data "aws_caller_identity" "current" {}
data "aws_partition" "current" {}

module "eks" {
  source       = "terraform-aws-modules/eks/aws"
  cluster_name = "eks-cluster-${data.terraform_remote_state.base.outputs.random_id}"

  cluster_endpoint_public_access = false

  cluster_addons = {
    kube-proxy = {
      most_recent = true
    }
    aws-ebs-csi-driver = {
      most_recent              = true
      service_account_role_arn = aws_iam_role.AmazonEKS_EBS_CSI_Driver.arn
    }
    vpc-cni = {
      most_recent = true
    }
    coredns = {
      configuration_values = jsonencode({
        computeType = "Fargate"
      })
    }
  }

  vpc_id                                = data.terraform_remote_state.base.outputs.aws_vpc.vpc_id
  subnet_ids                            = data.terraform_remote_state.base.outputs.aws_vpc.private_subnets
  control_plane_subnet_ids              = data.terraform_remote_state.base.outputs.aws_vpc.private_subnets
  cluster_additional_security_group_ids = [aws_security_group.eks_cluster_additional.id]
  # node_security_group_additional_rules  = [aws_security_group.eks_node_additional.id]

  eks_managed_node_groups = {
    blue = {
      instance_types = ["t3.large"]
      capacity_type  = "SPOT"
    }
    green = {
      min_size     = 2
      max_size     = 10
      desired_size = 3

      instance_types = ["t3.large"]
      capacity_type  = "SPOT"
    }
  }

  cluster_security_group_additional_rules = {
    inress_vault_injector_webhook = {
      description                   = "Access to Vault Agent Injector webhook endpoint from API server"
      protocol                      = "tcp"
      from_port                     = 8080
      to_port                       = 8080
      type                          = "ingress"
      source_cluster_security_group = true
    }
  }
}

resource "aws_iam_role" "AmazonEKS_EBS_CSI_Driver" {
  name = "AmazonEKSEBSCSIDriverRole-${data.terraform_remote_state.base.outputs.random_id}"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Federated": "arn:aws:iam::${data.aws_caller_identity.current.account_id}:oidc-provider/${module.eks.oidc_provider}"
      },
      "Action": "sts:AssumeRoleWithWebIdentity",
      "Condition": {
        "StringEquals": {
          "${module.eks.oidc_provider}:aud": "sts.amazonaws.com",
          "${module.eks.oidc_provider}:sub": "system:serviceaccount:kube-system:ebs-csi-controller-sa"
        }
      }
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "AmazonEKS_EBS_CSI_Driver" {
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
  role       = aws_iam_role.AmazonEKS_EBS_CSI_Driver.name
}

resource "aws_security_group" "eks_cluster_additional" {
  name        = "eks-cluster-addtl-${data.terraform_remote_state.base.outputs.random_id}"
  description = "eks-cluster-addtl-${data.terraform_remote_state.base.outputs.random_id}"
  vpc_id      = data.terraform_remote_state.base.outputs.aws_vpc.vpc_id

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.aws_jump.id]
  }

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [data.terraform_remote_state.base.outputs.tfc_agent_sg_id]
  }
}

# resource "aws_security_group" "eks_node_additional" {
#   name        = "eks-node-addtl-${data.terraform_remote_state.base.outputs.random_id}"
#   description = "eks-node-addtl-${data.terraform_remote_state.base.outputs.random_id}"
#   vpc_id      = data.terraform_remote_state.base.outputs.aws_vpc.vpc_id

#   ingress {
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = [data.terraform_remote_state.base.outputs.aws_vpc.vpc_cidr_block]
#   }
# }
